...

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/buttonCurrentJob"
            android:layout_width="242dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary"
            android:textSize="14sp"
            android:text="Current Job"
...
