<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CurrentJobActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView"
        style="@style/BannerStyle"
        android:text="Job Offers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Title"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextTitleJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView3"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Company"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextCompanyJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView4"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="City"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextCityJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="text" />
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textView4_2"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="State"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextStateJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView5"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Cost of Living"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextLivingCostJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView6"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Yearly Salary"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextYearlySalaryJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView7"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Yearly Bonus"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextYearlyBonusJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView8"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="Stock Option Shares"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextStockJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView9"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="Home Buying Fund %"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextHomeFundJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView10"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="Personal Choice Holidays"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextHolidaysJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/textView11"
            style="@style/TextFieldNameLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="Monthly Internet Stipend"
            android:inputType="none"/>

        <EditText
            android:id="@+id/editTextInternetJobOffer"
            style="@style/TextFieldValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="50"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_margin="24dp">

        <Button
            android:id="@+id/buttonSaveJobOffer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Save"
            android:layout_weight="1"/>

        <Space
            android:layout_width="24dp"
            android:layout_height="match_parent"
            />

        <Button
            android:id="@+id/buttonCancelJobOffer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Cancel"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>